# final_django_drf

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  task.txt
final_project/author/: admin.py  filters.py  models.py  permissions.py  serializers.py  tests.py  urls_author.py  urls_country.py  views.py
final_project/book/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
final_project/book/templates/: book_detail.html
final_project/genre/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
final_project/settings/: constants.py  enums.py  exceptions.py  inspectors.py  permissions.py  serializers.py  service.py  settings.py  urls.py  views.py
final_project/user/: constants.py  filters.py  helpers.py  models.py  permissions.py  serializers.py  service.py  tests.py  urls.py  views.py
